--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -114,7 +114,7 @@ struct kvm_kernel_irq_routing_entry {
                         // 芯片类型
                         // 有三个, pic master, pic slave和ioapic
                         unsigned irqchip;
-                        //
+                        // 引脚号
                         unsigned pin;
                 } irqchip;
                 // msi中断
@@ -235,7 +235,9 @@ struct rtc_status {
 union kvm_ioapic_redirect_entry {
         u64 bits;
         struct {
+                // 向量号
                 u8 vector;
+                // 交付模式
                 u8 delivery_mode:3;
                 u8 dest_mode:1;
                 u8 delivery_status:1;
@@ -277,10 +279,12 @@ irr成员就是IRR寄存器。
 
 `redirtbl[IOAPIC_NUM_PINS]`是一个数组，构成**PRT表**，**每个成员**对一个**IOAPIC的引脚**，执行`kvm_ioapic_redirect_entry`结构体。
 
-`kvm_ioapic_redirect_entry`结构体就是一个**RTE**，fields成员执行了**RTE中的各个域**，如
+`kvm_ioapic_redirect_entry`结构体就是一个**RTE**，**fields**成员执行了**RTE中的各个域**，如
 - `dest_id`和`dest_mode`用来**确定目标CPU**，
 - `vector`用来确定中断向量号，
-- `remote_irr`在**level触发**时候保证**中断共享**情况下可以处理到**所有设备的中断请求**。Fields和`kvm_kernel_irq_routing_entry`的**gsi**配合起来**确定了一个完整的中断信息内容！！！**
+- `remote_irr`在**level触发**时候保证**中断共享**情况下可以处理到**所有设备的中断请求**。
+
+`fields`和`kvm_kernel_irq_routing_entry`的**gsi**配合起来**确定了一个完整的中断信息内容！！！**
 
 目前kvm只为**虚拟机**创建**一个ioapic设备**（现在多路服务器可能有多个ioapic设备），**ioapic设备**提供**24个PIN**给**外部中断**使用。
 
