--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -474,6 +474,7 @@ int kvm_set_irq_routing(struct kvm *kvm,
 
         mutex_lock(&kvm->irq_lock);
         old = rcu_dereference_protected(kvm->irq_routing, 1);
+        // 设置虚拟机中断路由表为new
         rcu_assign_pointer(kvm->irq_routing, new);
         kvm_irq_routing_update(kvm);
         kvm_arch_irq_routing_update(kvm);
@@ -505,13 +506,12 @@ out:
 #define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
 ```
 
-这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见**gsi**就是**irq号**; 
-
-type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
-
-irqchip:
-- irqchip是芯片类型, 有三种, pic master、pic slave和ioapic， 这里是ioapic
-- pin是引脚号， 等于irq
+这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见
+- **gsi**就是**irq号**; 
+- type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
+- irqchip:
+        - irqchip是**芯片类型**, 有三种, pic master、pic slave和ioapic， 这里是**ioapic**
+        - pin是引脚号， 等于irq
 
 所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
 
