--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -412,6 +412,24 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 
 首个参数kvm指定特定的虚拟机，后面`default_routing`是一个**全局**的`kvm_irq_routing_entry`**数组**，一共24项，该数组没别的作用，就是初始化`kvm_irq_routing_table`**路由表**
 
+看一下这个**表项宏**：
+
+```cpp
+#define IOAPIC_ROUTING_ENTRY(irq) \
+        { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
+          .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
+#define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
+```
+
+这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见
+- **gsi**就是**irq号**; 
+- type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
+- irqchip:
+        - irqchip指明**芯片**, 有三种, pic master、pic slave和ioapic， 这里是**ioapic**
+        - pin是引脚号， 等于irq
+
+所以这里的**默认中断路由项**, 一共24项, 全部是**芯片类型**(非MSI), 而且是**ioapic**, gsi和引脚都是`0-24`
+
 看`kvm_set_irq_routing`,
 
 ```cpp
@@ -427,6 +445,7 @@ int kvm_set_irq_routing(struct kvm *kvm,
         u32 i, j, nr_rt_entries = 0;
         int r;
         /*正常情况下，nr_rt_entries=nr*/
+        // 这里是 24
         for (i = 0; i < nr; ++i) {
                 if (ue[i].gsi >= KVM_MAX_IRQ_ROUTES)
                         return -EINVAL;
@@ -497,26 +516,10 @@ out:
 }
 ```
 
-看一下这个**表项宏**：
-
-```cpp
-#define IOAPIC_ROUTING_ENTRY(irq) \
-        { .gsi = irq, .type = KVM_IRQ_ROUTING_IRQCHIP,  \
-          .u.irqchip = { .irqchip = KVM_IRQCHIP_IOAPIC, .pin = (irq) } }
-#define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
-```
-
-这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见
-- **gsi**就是**irq号**; 
-- type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
-- irqchip:
-        - irqchip是**芯片类型**, 有三种, pic master、pic slave和ioapic， 这里是**ioapic**
-        - pin是引脚号， 等于irq
-
 所以实际上，回到函数中`nr_rt_entries`就是数组中**项数**，接着为`kvm_irq_routing_table`**分配空间**，注意分配的空间包含**三部分**：
 
 - `kvm_irq_routing_table`**结构**、
-- `nr_rt_entries`个`hlist_head`
+- `map`
 - **nr个**`kvm_kernel_irq_routing_entry`
 
 所以`kvm_irq_routing_table`的**大小**是和**全局数组的大小**一样的。
