--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -551,6 +551,7 @@ static int setup_routing_entry(struct kvm *kvm,
          */
         // 遍历这个gsi对应的路由项链表
         hlist_for_each_entry(ei, &rt->map[gsi], link)
+                // 如果不是芯片
                 if (ei->type != KVM_IRQ_ROUTING_IRQCHIP ||
                     ue->type != KVM_IRQ_ROUTING_IRQCHIP ||
                     ue->u.irqchip.irqchip == ei->irqchip.irqchip)
