--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/2. 数据结构.md
@@ -147,6 +147,36 @@ link就是**连接点**，连接在上面**同一IRQ**对应的**map**上；hlis
 
 ![2020-05-03-19-01-08.png](./images/2020-05-03-19-01-08.png)
 
+```cpp
+/* gsi routing entry types */
+#define KVM_IRQ_ROUTING_IRQCHIP 1
+#define KVM_IRQ_ROUTING_MSI 2
+#define KVM_IRQ_ROUTING_S390_ADAPTER 3
+#define KVM_IRQ_ROUTING_HV_SINT 4
+
+struct kvm_irq_routing_entry {
+        __u32 gsi;
+        __u32 type;
+        __u32 flags;
+        __u32 pad;
+        union {
+                struct kvm_irq_routing_irqchip irqchip;
+                struct kvm_irq_routing_msi msi;
+                struct kvm_irq_routing_s390_adapter adapter;
+                struct kvm_irq_routing_hv_sint hv_sint;
+                __u32 pad[8];
+        } u;
+};
+
+struct kvm_irq_routing {
+        __u32 nr;
+        __u32 flags;
+        struct kvm_irq_routing_entry entries[0];
+};
+```
+
+`kvm_irq_routing`是中断路由, 用来记录中断路由信息的数据结构
+
 ## 2.4. PIC 芯片结构
 
 ![2020-05-03-19-02-53.png](./images/2020-05-03-19-02-53.png)
