--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -421,6 +421,8 @@ int kvm_setup_default_irq_routing(struct kvm *kvm)
 #define ROUTING_ENTRY1(irq) IOAPIC_ROUTING_ENTRY(irq)
 ```
 
+注意看这个结构体, `kvm_irq_routing_entry`, 不是`kvm_kernel_irq_routing_entry`
+
 这是**初始化**`default_routing`的一个关键宏，**每一项**都是通过该宏**传递irq号**（`0-23`）64位下是`0-47`, 可见
 - **gsi**就是**irq号**; 
 - type是`KVM_IRQ_ROUTING_IRQCHIP`, irq芯片, 而非MSI.
