--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -151,6 +151,12 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
  |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
  |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
+ |   |   |   ├─ kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT); // 为中断路由表分配空间
+ |   |   |   ├─ for (i = 0; i < nr; ++i)  // 循环默认的24个路由项
+ |   |   |   ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
+ |   |   |   ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
+ |   |   |   |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
+ |   |   |   |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 
 
@@ -486,7 +492,7 @@ int kvm_set_irq_routing(struct kvm *kvm,
                                 goto free_entry;
                         break;
                 }
-                // 设置路由项
+                // 设置每一个路由项
                 r = setup_routing_entry(kvm, new, e, ue);
                 if (r)
                         goto free_entry;
