--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -157,37 +157,8 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   |   |   ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
  |   |   |   |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
  |   |   |   |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
+ |   |   |   |─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
-
-
- |   |   |─ exit_qualification = vmcs_readl(EXIT_QUALIFICATION);   // 读取exit_qualification字段
- |   |   |─ gpa = vmcs_read64(GUEST_PHYSICAL_ADDRESS);   // 读取虚拟机的物理地址
- |   |   |─ error_code = XXXX;   // 拼凑error
- |   |   |─ kvm_mmu_page_fault(vcpu, gpa, error_code, NULL, 0);   // 处理page fault异常
- |   |   |   ├─ kvm_mmu_do_page_fault(vcpu, cr2_or_gpa, lower_32_bits(error_code), false); // 处理内存访问异常, mmio的见io部分
- |   |   |   |   └─ vcpu->arch.mmu->page_fault(vcpu, cr2_or_gpa, err, prefault);   // EPT下会调用kvm_tdp_page_fault
- |   |   |   |       └─ direct_page_fault(vcpu, gpa, error_code, prefault, max_level, true);   // EPT下会调用kvm_tdp_page_fault
- |   |   |   |           ├─ gfn = gpa >> PAGE_SHIFT;   // 虚拟机物理地址右移12位得到虚拟机物理页框号, 这是标准页面下的 GFN
- |   |   |   |           ├─ mmu_topup_memory_caches(vcpu);   // 分配缓存池
- |   |   |   |           ├─ fast_page_fault();   // 快速page fault处理
- |   |   |   |           ├─ try_async_pf();   // 根据gfn, 在memslots中查找, 得到pfn, 主机物理页框号, HPA
- |   |   |   |           |   ├─ slot = kvm_vcpu_gfn_to_memslot(vcpu, gfn);   // 得到该gfn(虚拟机页框号)对应的kvm_memory_slot
- |   |   |   |           |   └─ *pfn = __gfn_to_pfn_memslot();   // 得到该gfn(虚拟机页框号)对应的pfn(主机物理页框号), 即GPA到HPA的转换
- |   |   |   |           |        ├─ addr = __gfn_to_hva_many();   // 得到该gfn(虚拟机页框号)对应的qemu中分配的页面的HVA
- |   |   |   |           |        |   └─ return __gfn_to_hva_memslot();
- |   |   |   |           |        |       └─ return slot->userspace_addr + (gfn - slot->base_gfn) * PAGE_SIZE; // 这是gfn(虚拟机页框号)转换成主机虚拟地址(hva)
- |   |   |   |           |        └─ return hva_to_pfn(); // 得到这个主机虚拟地址(HVA)的主机物理页框号(HPA), 当然这只是一个PFN, 还需要PF完成真正页面的分配, 如果HVA对应的地址并不在内存中，还需要HOST自己处理缺页中断
- |   |   |   |           ├─ handle_abnormal_pfn();   // 处理反常的物理页
- |   |   |   |           └─ __direct_map();   // 完成EPT页表的构造，并在最后一级页表项中将gfn同pfn映射起来
- |   |   |   |               ├─ level = kvm_mmu_hugepage_adjust(vcpu, gfn, max_level, &pfn);   // 获取到该gfn对应的level, 基于vcpu->kvm->mm(qemu的mm_struct)
- |   |   |   |               ├─ for_each_shadow_entry(vcpu, gpa, it);   // 遍历EPT页表
- |   |   |   |               ├─ it.level == level: break;   //  如果页表的level等于请求的level, 表明是该entry引起的violation(说明到了叶子节点), 跳出
- |   |   |   |               ├─ sp = kvm_mmu_get_page();   // 对于非叶子节点, 如果该entry页表项值为0, 表明下一级页表页不存在, 则分配当前entry的下一级(level-1, 指向的页表)页表的kvm_mmu_page(sp)
- |   |   |   |               ├─ link_shadow_page(vcpu, it.sptep, sp);   // 非叶子结点, 下一级页表页不存在时, 将分配的下一级页表页链接到当前entry, 这是HPA
- |   |   |   |           |        ├─ mmu_spte_set(sptep, spte);   // 将sp处理后成为spte, 将其添加到当前entry(sptep), HPA
- |   |   |   |           |        └─ mmu_page_add_parent_pte(vcpu, sp, sptep); // 当前页表页(sp)会被多个上级页表项引用, 将所有上级页表项的parent_spte添加到当前页表页的patent_ptes链表中
- |   |   |   |           |   └─ mmu_set_spte();   // 设置最后一级页表项(即表项指向真正的页面), sptep指向pfn, HPA
- |   |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
 ```
 
 ## 6.3. 入口代码
@@ -592,10 +563,70 @@ static int setup_routing_entry(struct kvm *kvm,
 
 然后设置**irqchip的类型**和**管脚**，对于**IOAPIC**也是直接复制过来，PIC由于**管脚计算**是`irq%8`，所以这里需要**加上8的偏移**。之后**设置table的chip为gis号**。
 
-最后就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**双链表**中。
+最后就把`kvm_kernel_irq_routing_entry`**以gsi号位索引**，加入到了**map数组**中对应的**哈希链表**中。
 
+```cpp
+int kvm_set_routing_entry(struct kvm *kvm,
+                          struct kvm_kernel_irq_routing_entry *e,
+                          const struct kvm_irq_routing_entry *ue)
+{
+        /* We can't check irqchip_in_kernel() here as some callers are
+         * currently inititalizing the irqchip. Other callers should therefore
+         * check kvm_arch_can_set_irq_routing() before calling this function.
+         */
+        switch (ue->type) {
+        // 芯片类型
+        case KVM_IRQ_ROUTING_IRQCHIP:
+                if (irqchip_split(kvm))
+                        return -EINVAL;
+                e->irqchip.pin = ue->u.irqchip.pin;
+                switch (ue->u.irqchip.irqchip) {
+                // pic slave, 注意没有break
+                case KVM_IRQCHIP_PIC_SLAVE:
+                        e->irqchip.pin += PIC_NUM_PINS / 2;
+                        /* fall through */
+                // pic master
+                case KVM_IRQCHIP_PIC_MASTER:
+                        if (ue->u.irqchip.pin >= PIC_NUM_PINS / 2)
+                                return -EINVAL;
+                        // set方法
+                        e->set = kvm_set_pic_irq;
+                        break;
+                // ioapic
+                case KVM_IRQCHIP_IOAPIC:
+                        if (ue->u.irqchip.pin >= KVM_IOAPIC_NUM_PINS)
+                                return -EINVAL;
+                        // set 方法
+                        e->set = kvm_set_ioapic_irq;
+                        break;
+                default:
+                        return -EINVAL;
+                }
+                e->irqchip.irqchip = ue->u.irqchip.irqchip;
+                break;
+        // MSI类型
+        case KVM_IRQ_ROUTING_MSI:
+                e->set = kvm_set_msi;
+                e->msi.address_lo = ue->u.msi.address_lo;
+                e->msi.address_hi = ue->u.msi.address_hi;
+                e->msi.data = ue->u.msi.data;
 
+                if (kvm_msi_route_invalid(kvm, e))
+                        return -EINVAL;
+                break;
+        // HV SINT类型, 不懂
+        case KVM_IRQ_ROUTING_HV_SINT:
+                e->set = kvm_hv_set_sint;
+                e->hv_sint.vcpu = ue->u.hv_sint.vcpu;
+                e->hv_sint.sint = ue->u.hv_sint.sint;
+                break;
+        default:
+                return -EINVAL;
+        }
 
+        return 0;
+}
+```
 
 # 7. 初始化虚拟PIT
 
