--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -22,7 +22,7 @@
   - [6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#66-kvm_setup_default_irq_routing-默认中断路由表的初始化)
 - [7. 初始化虚拟PIT](#7-初始化虚拟pit)
   - [7.1. QEMU](#71-qemu)
-- [参考](#参考)
+- [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
 
@@ -112,7 +112,7 @@ PIC有三个重要的寄存器:
 
 **中断处理的逻辑**放在**kvm内核模块**中进行实现，但**设备的模拟**呈现还是需要**qemu设备模拟器**来搞定，最后qemu和kvm一起配合完成快速中断处理的流程。
 
-所以在**qemu**中也会创建i8259A和ioapic
+所以在**qemu**中也会创建**i8259A**和**ioapic**
 
 ## 6.1. QEMU
 
@@ -640,5 +640,9 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT2, &config);
 kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 ```
 
-# 参考
+
+
+
+
+# 8. 参考
 
