--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -6,23 +6,24 @@
 - [1. 基本原理](#1-基本原理)
 - [2. Time Tick](#2-time-tick)
   - [2.1. 虚拟化下的timer](#21-虚拟化下的timer)
+  - [2.2. 相关物理芯片](#22-相关物理芯片)
+    - [2.2.1. PIT主要为Intel 8254 PIT芯片](#221-pit主要为intel-8254-pit芯片)
+    - [2.2.2. PIC主要为8259A PIC芯片](#222-pic主要为8259a-pic芯片)
 - [3. 相关代码](#3-相关代码)
-- [4. 物理芯片介绍](#4-物理芯片介绍)
-  - [4.1. PIT主要为Intel 8254 PIT芯片](#41-pit主要为intel-8254-pit芯片)
-  - [4.2. PIC主要为8259A PIC芯片](#42-pic主要为8259a-pic芯片)
-- [5. 整体流程](#5-整体流程)
-- [6. 初始化中断控制器(PIC)](#6-初始化中断控制器pic)
+- [4. 整体流程](#4-整体流程)
+- [5. 初始化中断控制器](#5-初始化中断控制器)
+  - [5.1. PIC和IOAPIC的创建](#51-pic和ioapic的创建)
+    - [5.1.1. QEMU](#511-qemu)
+    - [5.1.2. 整体流程](#512-整体流程)
+    - [5.1.3. 入口代码](#513-入口代码)
+    - [5.1.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#514-kvm_pic_init-虚拟pic8259a的初始化)
+      - [5.1.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#5141-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
+      - [5.1.4.2. 三种设备在虚拟bus上的结构](#5142-三种设备在虚拟bus上的结构)
+    - [5.1.5. kvm_ioapic_init(): ioapic的初始化](#515-kvm_ioapic_init-ioapic的初始化)
+    - [5.1.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#516-kvm_setup_default_irq_routing-默认中断路由表的初始化)
+- [6. 初始化虚拟PIT](#6-初始化虚拟pit)
   - [6.1. QEMU](#61-qemu)
-  - [6.2. 整体流程](#62-整体流程)
-  - [6.3. 入口代码](#63-入口代码)
-  - [6.4. kvm_pic_init(): 虚拟pic(8259A)的初始化](#64-kvm_pic_init-虚拟pic8259a的初始化)
-    - [6.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备](#641-kvm_io_bus_register_dev-在相应的io_bus总线上注册设备)
-    - [6.4.2. 三种设备在虚拟bus上的结构](#642-三种设备在虚拟bus上的结构)
-  - [6.5. kvm_ioapic_init(): ioapic的初始化](#65-kvm_ioapic_init-ioapic的初始化)
-  - [6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化](#66-kvm_setup_default_irq_routing-默认中断路由表的初始化)
-- [7. 初始化虚拟PIT](#7-初始化虚拟pit)
-  - [7.1. QEMU](#71-qemu)
-- [8. 参考](#8-参考)
+- [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
 
@@ -55,17 +56,13 @@
 
 在**QEMU**中，用**SIGALARM信号**来实现：QEMU利用**某种机制**，使**timer interrupt handler**会向**QEMU process**发送一个**SIGALARM信号**，处理该信号过程中再**模拟PIT**中**产生一次时钟**。QEMU再通过某种机制，将**此模拟PIT**发出的**模拟中断交付给kvm**，再由kvm**注入**到虚拟机中去。
 
-目前的kvm版本支持内核PIT、APIC和内核PIC，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
+目前的kvm版本支持**内核PIT**、**APIC**和**内核PIC**，因为这两个设备是**频繁使用**的，在**内核模式中模拟**比在**用户模式模拟**性能更高。
 
 这里重点是讲内核PIT的模拟实现，弄清楚它是如何为guest OS提供时钟的。
 
-# 3. 相关代码
+## 2.2. 相关物理芯片
 
-![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
-
-# 4. 物理芯片介绍
-
-## 4.1. PIT主要为Intel 8254 PIT芯片
+### 2.2.1. PIT主要为Intel 8254 PIT芯片
 
 **PIT**(**Programmable Interval Timer**), **可编程间隔定时器**
 
@@ -79,7 +76,7 @@ i386使用通常是Intel 8254 PIT芯片, 它的I/O端口地址范围是`40h ~ 43
 - **通道1**通常用来控制**DMAC对RAM的刷新**
 - **通道3**被连接到**PC机的扬声器**, 以产生**方波信号**.
 
-## 4.2. PIC主要为8259A PIC芯片
+### 2.2.2. PIC主要为8259A PIC芯片
 
 **PIC**(**Programmable Interrupt Controller**), **可编程中断控制器**
 
@@ -93,7 +90,11 @@ PIC有三个重要的寄存器:
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
 
-# 5. 整体流程
+# 3. 相关代码
+
+![2020-05-04-13-06-31.png](./images/2020-05-04-13-06-31.png)
+
+# 4. 整体流程
 
 整个主要流程:
 
@@ -101,9 +102,9 @@ PIC有三个重要的寄存器:
 
 修正: 重定向表中有目标lapic的id
 
-# 6. 初始化中断控制器(PIC)
+# 5. 初始化中断控制器
 
-考虑到中断实时性对性能的影响，**PIC和IOAPIC**的**设备模拟主要逻辑**都放到了**kvm模块**进行实现，**每个VCPU**的**LAPIC**则**完全放到kvm**中进行实现。 
+考虑到中断实时性对性能的影响，**PIC和IOAPIC**的**设备模拟主要逻辑！！！** 都放到了**kvm模块**进行实现，**每个VCPU**的**LAPIC**则**完全！！！放到kvm**中进行实现。 
 
 **i8259控制器**和**IOAPIC**的创建和初始化由**qemu和kvm配合完成**，包括了2个方面：
 
@@ -114,7 +115,9 @@ PIC有三个重要的寄存器:
 
 所以在**qemu**中也会创建**i8259A**和**ioapic**
 
-## 6.1. QEMU
+## 5.1. PIC和IOAPIC的创建
+
+### 5.1.1. QEMU
 
 qemu代码中中断控制器的kvm内核初始化流程为：
 
@@ -132,7 +135,7 @@ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)
 
 qemu通过kvm的ioctl命令`KVM_CREATE_IRQCHIP`调用到kvm内核模块中，在**内核模块**中**创建和初始化PIC/IOAPIC设备**（创建设备对应的数据结构并将设备注册到总线上）。
 
-## 6.2. 整体流程
+### 5.1.2. 整体流程
 
 ```cpp
 kvm_vm_ioctl()  // vm ioctl的入口
@@ -161,7 +164,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
 ```
 
-## 6.3. 入口代码
+### 5.1.3. 入口代码
 
 ```cpp
         case KVM_CREATE_IRQCHIP: {
@@ -202,7 +205,7 @@ kvm_vm_ioctl()  // vm ioctl的入口
         }
 ```
 
-## 6.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
+### 5.1.4. kvm_pic_init(): 虚拟pic(8259A)的初始化
 
 `arch/x86/kvm/i8259.c`
 
@@ -267,7 +270,7 @@ fail_unlock:
 }
 ```
 
-### 6.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
+#### 5.1.4.1. kvm_io_bus_register_dev(): 在相应的io_bus总线上注册设备
 
 8259A PIC属于PIO访问类型.
 
@@ -315,7 +318,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 }
 ```
 
-### 6.4.2. 三种设备在虚拟bus上的结构
+#### 5.1.4.2. 三种设备在虚拟bus上的结构
 
 虚拟bus总线结构如下, 注意IO端口地址与设备读写函数的关联
 
@@ -323,7 +326,7 @@ int kvm_io_bus_register_dev(struct kvm *kvm, enum kvm_bus bus_idx, gpa_t addr,
 
 每个`kvm_io_device`的设备都有对应的读写函数
 
-## 6.5. kvm_ioapic_init(): ioapic的初始化
+### 5.1.5. kvm_ioapic_init(): ioapic的初始化
 
 ```cpp
 int kvm_ioapic_init(struct kvm *kvm)
@@ -360,7 +363,7 @@ int kvm_ioapic_init(struct kvm *kvm)
 
 ![2020-05-04-17-58-37.png](./images/2020-05-04-17-58-37.png)
 
-## 6.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
+### 5.1.6. kvm_setup_default_irq_routing(): 默认中断路由表的初始化
 
 **中断路由表的初始化**通过`kvm_setup_default_irq_routing`函数实现，
 
@@ -628,9 +631,9 @@ int kvm_set_routing_entry(struct kvm *kvm,
 }
 ```
 
-# 7. 初始化虚拟PIT
+# 6. 初始化虚拟PIT
 
-## 7.1. QEMU
+## 6.1. QEMU
 
 PIT创建:
 
@@ -644,5 +647,5 @@ kvm_vm_ioctl(kvm_state, KVM_CREATE_PIT)
 
 
 
-# 8. 参考
+# 7. 参考
 
