--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -12,6 +12,7 @@
 - [3. 相关代码](#3-相关代码)
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
+  - [LAPIC的创建](#lapic的创建)
   - [5.1. PIC和IOAPIC的创建](#51-pic和ioapic的创建)
     - [5.1.1. QEMU](#511-qemu)
     - [5.1.2. 整体流程](#512-整体流程)
@@ -43,8 +44,10 @@
 
 普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供
 
-- PIT定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
+- PIT(i8254)定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
+
+
 
 ## 2.1. 虚拟化下的timer
 
@@ -114,6 +117,10 @@ PIC有三个重要的寄存器:
 **中断处理的逻辑**放在**kvm内核模块**中进行实现，但**设备的模拟**呈现还是需要**qemu设备模拟器**来搞定，最后qemu和kvm一起配合完成快速中断处理的流程。
 
 所以在**qemu**中也会创建**i8259A**和**ioapic**
+
+## LAPIC的创建
+
+
 
 ## 5.1. PIC和IOAPIC的创建
 
