--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -42,10 +42,12 @@
 
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
-普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供
+普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供产生中断源
 
 - PIT(i8254)定期(**1ms in Linux**)产生一个**timer interrupt**，作为**global tick**, 
 - **APIC Timer**产生一个**local tick**。
+
+两者电子线路连接不同，对于i8254设备来说首先连接到i8259中断控制器，i8259中断控制器再连接到ioapic设备中，送到lapic,最后注入到vcpu中。对于APIC Timer设备实际就是lapic的一个功能，意思就是通过编程可以触发lapic设备周期产生中断，然后注入到vcpu。通过上面了解知道两者区别了APIC Timer的是每个cpu内核都有一个定时器，而PIT是共用的一个。
 
 
 
