--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/14. LINT0和LINT1.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/14. LINT0和LINT1.md
@@ -3,13 +3,13 @@
 
 <!-- code_chunk_output -->
 
-* [1 LINT0与LINT1寄存器](#1-lint0与lint1寄存器)
-	* [1.1 使用Fixed模式时](#11-使用fixed模式时)
-	* [1.2 LINT0与LINT1的BIOS设置](#12-lint0与lint1的bios设置)
-* [2 从LINT0屏蔽外部中断请求](#2-从lint0屏蔽外部中断请求)
-* [3 从LINT1屏蔽NMI](#3-从lint1屏蔽nmi)
-	* [3.1 通过NMI\_EN寄存器来屏蔽NMI](#31-通过nmi_en寄存器来屏蔽nmi)
-	* [3.2 通过LINT1来屏蔽NMI](#32-通过lint1来屏蔽nmi)
+- [1 LINT0与LINT1寄存器](#1-lint0与lint1寄存器)
+  - [1.1 使用Fixed模式时](#11-使用fixed模式时)
+  - [1.2 LINT0与LINT1的BIOS设置](#12-lint0与lint1的bios设置)
+- [2 从LINT0屏蔽外部中断请求](#2-从lint0屏蔽外部中断请求)
+- [3 从LINT1屏蔽NMI](#3-从lint1屏蔽nmi)
+  - [3.1 通过NMI\_EN寄存器来屏蔽NMI](#31-通过nmi_en寄存器来屏蔽nmi)
+  - [3.2 通过LINT1来屏蔽NMI](#32-通过lint1来屏蔽nmi)
 
 <!-- /code_chunk_output -->
 
@@ -17,11 +17,13 @@ Local APIC接收的**外部中断源**其中一部分来自于**LINT0（Local In
 
 ![config](./images/69.png)
 
-在上图里，Intel的双核4线程处理器上**BSP（APIC ID为00H**）的LVT **LINT0连接到外部system chip（系统芯片**）里的**8259类的中断控制器INTR接口**。LVT **LINT1接连到system chip的NMI口**。
+在上图里，Intel的双核4线程处理器上**BSP（APIC ID为00H**）的
+- LVT **LINT0连接到外部system chip（系统芯片**）里的**8259类的中断控制器INTR接口**。
+- LVT **LINT1接连到system chip的NMI口**。
 
 而实际中上面4个logical processor里剩余的**3个logical processor（application processor）的LINT0与LINT1被忽略**，它们**接收不到来自外部8259中断控制器和NMI接口的中断请求**，只能**接收来自I/O APIC的中断消息**。因此，8259中断控制器并**不适合在MP环境下使用，推荐使用I/O APIC在MP环境工作(！！！**)。
 
-当**local APIC被disable**时，**LINT0**被直接作为处理器的**INTR pin使用**，**LINT1**被直接作为处理器的**NMI pin使用**。
+当**local APIC被disable！！！** 时，**LINT0**被直接作为处理器的**INTR pin使用**，**LINT1**被直接作为处理器的**NMI pin使用**。
 
 # 1 LINT0与LINT1寄存器
 
