--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/2. 使用Local APIC.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/2. 使用Local APIC.md
@@ -143,7 +143,7 @@ disable_xapic：
 
 上面两个函数分别用来进行software enable和disable APIC。
 
-在**处理器reset**时，SVR的初始值是0x000000FF，**APIC是关闭的**。在**BIOS初始化运行期间**，SVR[8]被置为1，**APIC是开启**的。
+在**处理器reset**时，SVR的初始值是0x000000FF，**APIC是关闭的**。在**BIOS初始化运行期间**，`SVR[8]`被置为1，**APIC是开启**的。
 
 我们可以测试一下SVR的值，代码如下。
 
@@ -151,9 +151,9 @@ disable_xapic：
 mov eax，[APIC_BASE + SVR]   ； 读取SVR的值
 ```
 
-在VMware上运行时，SVR的值为0x0000010F，在真实的机器上也是这个结果。SVR[8]已经被BIOS设置为1（开启APIC）。
+在VMware上运行时，SVR的值为0x0000010F，在真实的机器上也是这个结果。`SVR[8]`已经被BIOS设置为1（开启APIC）。
 
-当**local APIC被disable**时，**处理器的LINT0**和**LINT1 pin直接被作为INTR和NMI pin**使用。
+当**local APIC被disable！！！** 时，**处理器的LINT0**和**LINT1 pin直接被作为INTR！！！和NMI pin！！！** 使用。
 
 在**Intel**机器中，当**Enable APIC**时，**LINT0和LINT1**连接到**8259中断控制器和NMI**，使用**LVT LINT0寄存器**的**mask位**，可以**屏蔽8259中断控制器的中断请求**。然而在AMD机器中8259通过中断消息机制传送到local APIC，也就不能通过LVT LINT0寄存器的mask位进行屏蔽。
 
