--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/0. 中断和异常.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第16章 中断和异常处理/0. 中断和异常.md
@@ -1,5 +1,14 @@
 
-# 中断和异常的相同点
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 中断和异常的相同点](#1-中断和异常的相同点)
+- [2. 中断和异常在处理流程的区别](#2-中断和异常在处理流程的区别)
+
+<!-- /code_chunk_output -->
+
+# 1. 中断和异常的相同点
 
 在x86/x64体系中, **中断**和**异常**使用**相同的执行环境和机制**, 包括:
 
@@ -9,7 +18,7 @@
 
 ③ 在Handling Interrupt(中断处理)**流程上是一致的**, 当然有些额外区别
 
-# 中断和异常在处理流程的区别
+# 2. 中断和异常在处理流程的区别
 
 **中断**和**异常**事件可以是**主动发起**和**被动产生**的, 它们在处理流程中有**几个显著区别**.
 
