--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/1. APIC体系概述.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/1. APIC体系概述.md
@@ -29,7 +29,7 @@
 **整个APIC体系**可以分为两大部分：**Local APIC**和**I/O APIC**，
 
 - **Local APIC是整个APIC体系的核心**，它在**处理器的内部**；
-- 而**I/O APIC是芯片组的一部分**，它在**PCI\-to\-ISA bridge**（或称**PCI\-to\-LPC bridge**）的**LPC控制器内**。
+- 而**I/O APIC是芯片组的一部分**，它在`PCI-to-ISA bridge`（或称`PCI-to-LPC bridge`）的**LPC控制器内**。
 
 ![config](./images/1.png)
 
