--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/14. LINT0和LINT1.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/14. LINT0和LINT1.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [1 LINT0与LINT1寄存器](#1-lint0与lint1寄存器)
+- [LINT0与LINT1寄存器](#lint0与lint1寄存器)
   - [1.1 使用Fixed模式时](#11-使用fixed模式时)
   - [1.2 LINT0与LINT1的BIOS设置](#12-lint0与lint1的bios设置)
 - [2 从LINT0屏蔽外部中断请求](#2-从lint0屏蔽外部中断请求)
@@ -21,11 +21,13 @@ Local APIC接收的**外部中断源**其中一部分来自于**LINT0（Local In
 - LVT **LINT0连接到外部system chip（系统芯片**）里的**8259类的中断控制器INTR接口**。
 - LVT **LINT1接连到system chip的NMI口**。
 
-而实际中上面4个logical processor里剩余的**3个logical processor（application processor）的LINT0与LINT1被忽略**，它们**接收不到来自外部8259中断控制器和NMI接口的中断请求**，只能**接收来自I/O APIC的中断消息**。因此，8259中断控制器并**不适合在MP环境下使用，推荐使用I/O APIC在MP环境工作(！！！**)。
+而实际中上面4个logical processor里剩余的**3个logical processor（application processor）的LINT0与LINT1被忽略**，它们**接收不到来自外部8259中断控制器和NMI接口的中断请求**，只能**接收来自I/O APIC的中断消息**。
+
+因此，**8259中断控制器**并**不适合在MP环境下使用，推荐使用I/O APIC在MP环境工作(！！！**)。
 
 当**local APIC被disable！！！** 时，**LINT0**被直接作为处理器的**INTR pin使用**，**LINT1**被直接作为处理器的**NMI pin使用**。
 
-# 1 LINT0与LINT1寄存器
+# LINT0与LINT1寄存器
 
 LVT中的**LINT0与LINT1寄存器**是**最为复杂的寄存器**，比起其他的LVT寄存器，额外多了几个域：Interrupt Input Pin Polarity位，Remote IRR位，以及Tigger Mode位，如下所示。
 
@@ -68,7 +70,9 @@ mov [APIC_BASE + LVT_LINT0]，eax  ； 设置 LINT0 寄存器
 
 ## 1.2 LINT0与LINT1的BIOS设置
 
-在处理器INIT或Reset后，local APIC所有的LVT寄存器都被masked（屏蔽），而在BIOS运行期间会对LINT0和LINT1进行设置，因此在OS启动之前，LINT0和LINT1已经可以正常工作了。典型地，BIOS对LINT0和LINT1的设置如下表所示。
+在处理器INIT或Reset后，local APIC所有的LVT寄存器都被masked（屏蔽），而在BIOS运行期间会对LINT0和LINT1进行设置，因此在OS启动之前，LINT0和LINT1已经可以正常工作了。
+
+典型地，BIOS对LINT0和LINT1的设置如下表所示。
 
 ![config](./images/74.png)
 
