--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -5,6 +5,7 @@
 
 - [1. 基本原理](#1-基本原理)
 - [2. Time Tick](#2-time-tick)
+  - [物理环境下的timer](#物理环境下的timer)
   - [2.1. 虚拟化下的timer](#21-虚拟化下的timer)
   - [2.2. 相关物理芯片](#22-相关物理芯片)
     - [2.2.1. PIT主要为Intel 8254 PIT芯片](#221-pit主要为intel-8254-pit芯片)
@@ -40,6 +41,8 @@
 
 # 2. Time Tick
 
+## 物理环境下的timer
+
 一个操作系统要跑起来，必须有**Time Tick**，它就像是身体的脉搏。
 
 普通情况下，OS Time Tick由**PIT**(i8254)或**APIC Timer**设备提供产生中断源
@@ -49,7 +52,9 @@
 
 两者电子线路连接不同:
 - 对于**i8254设备**来说首先连接到**i8259中断控制器**，i8259中断控制器再连接到**ioapic设备**中，送到**lapic**, 最后**注入到vcpu**中。
-- 对于APIC Timer设备实际就是lapic的一个功能，意思就是通过编程可以触发lapic设备周期产生中断，然后注入到vcpu。通过上面了解知道两者区别了APIC Timer的是每个cpu内核都有一个定时器，而PIT是共用的一个。
+- 对于APIC Timer设备实际就是lapic的一个功能，意思就是通过编程可以触发lapic设备周期产生中断，然后注入到vcpu。
+
+通过上面了解知道两者区别了**APIC Timer**的是**每个cpu**内核都有**一个定时器**，而**PIT是共用的一个**。
 
 
 
