--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -56,7 +56,10 @@
 
 通过上面了解知道两者区别了**APIC Timer**的是**每个cpu**内核都有**一个定时器**，而**PIT是共用的一个**。
 
-
+APIC Timer的模式APIC定时器包含**3种定时器模式**，
+- 周期触发`periodic`
+- 一次性触发`one-shot`
+- `TSC-Deadline`模式(最新的CPU里面支持)。
 
 ## 2.1. 虚拟化下的timer
 
