--- Auto-Git Commit ---

--- a/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
+++ b/Architecture/Learning/x86_64编程体系探索及编程/第4篇 中断体系/第18章 local APIC体系/12. APIC timer.md
@@ -20,7 +20,7 @@ local APIC的**timer**是非常简单易用的。它由以下**4个部分组成*
 
 ② Initial\-count（**初始计数器**）寄存器。
 
-③ Current\-count（**当前计数器**）寄存器。
+③ Current\-count（**当前计数器**）寄存器, 只读寄存器。
 
 ④ Divide configuration（**clock频率配置**）寄存器。
 
@@ -67,11 +67,15 @@ LVT timer提供了三种计数模式。
        mov DWORD [APIC_BASE + TIMER_ICR]，256
 ```
 
-上面的代码向**LVT timer寄存器**写入设置的值使用了one\-shot模式。**initial\-count寄存器**被写入256值。一旦写入initial\-count值，APIC timer就开始计数。
+上面的代码向**LVT timer寄存器**写入设置的值使用了one\-shot模式。
+
+**initial\-count寄存器**被写入256值。一旦写入initial\-count值，APIC timer就开始计数。
 
 ### 3.2. Periodic计数模式(定期)
 
-使用**periodic**计数模式，当**current\-count**减为**0**时，产生**timer中断**。local APIC将在**current\-count寄存器**里装入**initial\-count**值**重新开始计数**，从而**周期性**地产生timer中断，除非写入0值到initial\-count寄存器里。
+使用**periodic**计数模式，当**current\-count**减为**0**时，产生**timer中断**。
+
+local APIC将在**current\-count寄存器**里装入**initial\-count**值**重新开始计数！！！**，从而**周期性**地产生timer中断，除非**写入0值**到initial\-count寄存器里。
 
 ```x86asm
 ； 设置 LVT timer
@@ -86,9 +90,11 @@ LVT timer提供了三种计数模式。
 
 当`CPUID.01：ECX[24]`为**1**时，APIC timer允许使用TSC\-deadline计数模式。
 
-在**TSC\-deadline计数模式**里，**initial\-count**寄存器**被忽略**，current\-count寄存器读出来为0。**IA32\_TSC\_DEADLINE寄存器！！！** 设置一个**目标的TSC（time\-stamp counter）值**。
+在**TSC\-deadline计数模式**里，**initial\-count**寄存器**被忽略**，current\-count寄存器**读出来为0**。
 
-软件向64位的**IA32\_TSC\_DEADLINE寄存器**写入**非0**值时，**APIC timer**开始计数。
+`IA32_TSC_DEADLINE`寄存器设置一个**目标的TSC（time\-stamp counter）值**。
+
+软件向64位的`IA32_TSC_DEADLINE`寄存器写入**非0**值时，**APIC timer**开始计数。
 
 当**TSC（Time Stamp Counter**）值**大于或等于**IA32\_TSC\_DEADLINE寄存器的值时，将产生timer中断。
 
