--- Auto-Git Commit ---

--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -10,6 +10,7 @@
   - [2.2. 相关物理芯片](#22-相关物理芯片)
     - [2.2.1. PIT主要为Intel 8254 PIT芯片](#221-pit主要为intel-8254-pit芯片)
     - [2.2.2. PIC主要为8259A PIC芯片](#222-pic主要为8259a-pic芯片)
+    - [APIC](#apic)
 - [3. 相关代码](#3-相关代码)
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
@@ -104,6 +105,10 @@ PIC有三个重要的寄存器:
 (2) ISR(Interrupt Service Register, 中断请求寄存器): 共8位, 某位置为1表明对应管脚的中断已经提交到CPU处理, 但CPU还未处理完.
 
 (3) IMR(Interrupt Mask Register, 中断屏蔽寄存器): 共8位, 某位置为1表明对应的中断管脚被屏蔽.
+
+### APIC
+
+见硬件基础
 
 # 3. 相关代码
 
