--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -15,6 +15,8 @@
 - [4. 整体流程](#4-整体流程)
 - [5. 初始化中断控制器](#5-初始化中断控制器)
   - [LAPIC的创建](#lapic的创建)
+    - [整体流程](#整体流程)
+    - [代码入口](#代码入口)
   - [5.1. PIC和IOAPIC的创建](#51-pic和ioapic的创建)
     - [5.1.1. QEMU](#511-qemu)
     - [5.1.2. 整体流程](#512-整体流程)
@@ -139,6 +141,39 @@ PIC有三个重要的寄存器:
 
 由于**APIC Timer设备**实际就是**lapic的一个功能**，所以在创建lapic设备同时，也就辅助设置了。
 
+不存在qemu侧流程
+
+### 整体流程
+
+```cpp
+kvm_create_lapic()  // vcpu创建中创建lapic
+ ├─  kvm_arch_vm_ioctl()     
+ |   ├─ kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
+ |   ├─ kvm_pic_init()   // pic创建, 8259
+ |   |   |─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
+ |   |   |─ kvm_iodevice_init(&s->dev_master, &picdev_master_ops); // 注册master的IO端口读写函数
+ |   |   |─ kvm_iodevice_init(&s->dev_slave, &picdev_slave_ops); // 注册slave的IO端口读写函数
+ |   |   |─ kvm_iodevice_init(&s->dev_eclr, &picdev_eclr_ops); // 注册eclr的IO端口读写函数
+ |   |   |─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x20, 2, &s->dev_master); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   |─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0xa0, 2, &s->dev_slave); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   |─ kvm_io_bus_register_dev(kvm, KVM_PIO_BUS, 0x4d0, 2, &s->dev_eclr); // 注册了PIO型的bus访问形式；另一种IO形式为MMIO；
+ |   |   └─ kvm->arch.vpic = s;   // 将s赋值给kvm->arch.vpic
+ |   ├─ kvm_ioapic_init()   // ioapic的初始化
+ |   |   ├─ struct kvm_ioapic *ioapic = kzalloc(sizeof(struct kvm_ioapic), GFP_KERNEL_ACCOUNT);  // 创建kvm_pic结构
+ |   ├─ kvm_setup_default_irq_routing();   // 设置默认的irq路由表
+ |   |   └─ x86_emulate_instruction(vcpu, cr2_or_gpa, emulation_type, insn, insn_len);   // 
+ |   |   |   ├─ kzalloc(struct_size(new, map, nr_rt_entries), GFP_KERNEL_ACCOUNT); // 为中断路由表分配空间
+ |   |   |   ├─ for (i = 0; i < nr; ++i)  // 循环默认的24个路由项
+ |   |   |   ├─ kzalloc(sizeof(*e), GFP_KERNEL_ACCOUNT); // 为每个中断路由项分配空间
+ |   |   |   ├─ setup_routing_entry(kvm, new, e, ue) // 设置路由项
+ |   |   |   |    ├─ kvm_set_routing_entry(kvm, e, ue);;   // 设置路由项的set方法
+ |   |   |   |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
+ |   |   |   |─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
+ |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
+```
+
+### 代码入口
+
 lapic是每个vcpu一个, 所以在创建vcpu流程中创建了lapic
 
 ```cpp
@@ -147,7 +182,7 @@ int kvm_create_lapic(struct kvm_vcpu *vcpu, int timer_advance_ns)
         struct kvm_lapic *apic;
 
         ASSERT(vcpu != NULL);
-
+        // 分配apic结构体
         apic = kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);
         if (!apic)
                 goto nomem;
