--- a/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
+++ b/Virtualization/KVM/5. IO虚拟化/4. Interrupt/3. 中断虚拟化.md
@@ -146,8 +146,8 @@ PIC有三个重要的寄存器:
 ### 整体流程
 
 ```cpp
-kvm_create_lapic()  // vcpu创建中创建lapic
- ├─  kvm_arch_vm_ioctl()     
+kvm_arch_vcpu_create()  // vcpu创建中创建lapic
+ ├─ kvm_create_lapic() // lapic创建入口 
  |   ├─ kzalloc(sizeof(*apic), GFP_KERNEL_ACCOUNT);  // 如果irqchip在kvm中实现, 则直接返回, 不执行任何动作
  |   ├─ kvm_pic_init()   // pic创建, 8259
  |   |   |─ struct kvm_pic *s = kzalloc(sizeof(struct kvm_pic), GFP_KERNEL_ACCOUNT);   // 创建kvm_pic结构
@@ -170,6 +170,7 @@ kvm_create_lapic()  // vcpu创建中创建lapic
  |   |   |   |    └─ hlist_add_head(&e->link, &rt->map[e->gsi]);   // 设置gsi对应的哈希链表
  |   |   |   |─ rcu_assign_pointer(kvm->irq_routing, new);   // 设置虚拟机中断路由表
  |   └─ kvm->arch.irqchip_mode = KVM_IRQCHIP_KERNEL;  // irqchip为kernel模式, 即在kernel中实现
+ ├─ kvm_vcpu_reset() //  
 ```
 
 ### 代码入口
