--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -365,24 +365,30 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   |   ├─ vmx->vpid = allocate_vpid(); // 分配vpid
  |   |   |   ├─ vmx->pml_pg = alloc_page(); // 
  |   |   |   ├─ alloc_loaded_vmcs(&vmx->vmc01); // loaded_vmcs的分配以及初始化
- |   |   |         loaded_vmcs->vmcs = alloc_vmcs(); // 分配一个页面
- |   |   |         loaded_vmcs_init(loaded_vmcs); // 初始化 loaded_vmcs
- |   |   |             vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
- |   |   |         loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // msr_bitmap 分配页面
- |   |   |     vmx_disable_intercept_for_msr();
- |   |   |     vmx_vcpu_load(); // 加载vcpu信息
- |   |   |         vmx_vcpu_load_vmcs(); // 加载vmcs
- |   |   |             already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
- |   |   |                 loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
- |   |   |                 list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
- |   |   |             per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
- |   |   |             vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
- |   |   |                 kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu); // 
- |   |   |                 vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 没加载时, 写VMCS的TSS
- |   |   |                 vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 没加载时, 写GDT
- |   |   |                 vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
- |   |   |             decache_tsc_multiplier(); 
- |   |   |         vmx_vcpu_pi_load(); // 加载posted interrupt
+ |   |   |   |   ├─ loaded_vmcs->vmcs = alloc_vmcs(); // 分配一个页面
+ |   |   |   |   ├─ vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
+ |   |   |   |   ├─ loaded_vmcs->shadow_vmcs = NULL;
+ |   |   |   |   ├─ loaded_vmcs->hv_timer_soft_disabled = false;
+ |   |   |   |   ├─ loaded_vmcs->cpu = -1;
+ |   |   |   |   ├─ loaded_vmcs->launched = 0; // 
+ |   |   |   |   ├─ loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // msr_bitmap 分配页面
+ |   |   |   |   ├─ memset(&loaded_vmcs->host_state, 0, sizeof(struct vmcs_host_state)); // host_state
+ |   |   |   |   └─ memset(&loaded_vmcs->controls_shadow, 0, sizeof(struct vmcs_controls_shadow)); // controls_shadow
+ |   |   |   ├─ vmx_disable_intercept_for_msr();
+ |   |   |   ├─ vmx->loaded_vmcs = &vmx->vmcs01;
+ |   |   |   ├─ vmx_vcpu_load(); // 加载vcpu信息
+ |   |   |   |   ├─ vmx_vcpu_load_vmcs(); // 加载vmcs
+ |   |   |   |   |     already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
+ |   |   |   |   |         loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
+ |   |   |   |   |         list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
+ |   |   |   |   |     per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
+ |   |   |   |   |     vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
+ |   |   |   |   |         kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu); // 
+ |   |   |   |   |         vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 没加载时, 写VMCS的TSS
+ |   |   |   |   |         vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 没加载时, 写GDT
+ |   |   |   |   |         vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
+ |   |   |   |   |     decache_tsc_multiplier(); 
+ |   |   |   |   └─ vmx_vcpu_pi_load(); // 加载posted interrupt
  |   |   |     init_vmcs(vmx); // 初始化vmcs, 而guest-state在vmx_vcpu_reset()
  |   |   |         vmcs_write32();
  |   |   |         vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
