--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -378,26 +378,29 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   |   ├─ vmx->loaded_vmcs = &vmx->vmcs01;
  |   |   |   ├─ vmx_vcpu_load(); // 加载vcpu信息
  |   |   |   |   ├─ vmx_vcpu_load_vmcs(); // 加载vmcs
- |   |   |   |   |     already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
- |   |   |   |   |         loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
- |   |   |   |   |         list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
- |   |   |   |   |     per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
- |   |   |   |   |     vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
- |   |   |   |   |         kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu); // 
- |   |   |   |   |         vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 没加载时, 写VMCS的TSS
- |   |   |   |   |         vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 没加载时, 写GDT
- |   |   |   |   |         vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
- |   |   |   |   |     decache_tsc_multiplier(); 
+ |   |   |   |   |   ├─ already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
+ |   |   |   |   |   |   ├─ loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
+ |   |   |   |   |   |   └─ list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
+ |   |   |   |   |   ├─ per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
+ |   |   |   |   |   ├─ vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
+ |   |   |   |   |   |   ├─ kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu); // 
+ |   |   |   |   |   |   ├─ vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 没加载时, 写VMCS的TSS
+ |   |   |   |   |   |   ├─ vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 没加载时, 写GDT
+ |   |   |   |   |   |   └─  vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
+ |   |   |   |   |   └─ decache_tsc_multiplier(); // 设置tsc multiplier
  |   |   |   |   └─ vmx_vcpu_pi_load(); // 加载posted interrupt
- |   |   |     init_vmcs(vmx); // 初始化vmcs, 而guest-state在vmx_vcpu_reset()
- |   |   |         vmcs_write32();
- |   |   |         vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
- |   |   |         vmx_set_constant_host_state(vmx); // 设置host-state常量
- |   |   |             vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址, 这里面是个ret, 详细说明见下面VCPU_RUN
- |   |   |     vmx_vcpu_put();
- |   |   |         vmx_vcpu_pi_put();
- |   |   |         vmx_prepare_switch_to_host(); // 
- |   |   |     put_cpu();
+ |   |   |   ├─ init_vmcs(vmx); // 初始化vmcs, 而guest-state在vmx_vcpu_reset()
+ |   |   |   |   ├─ vmcs_write32();
+ |   |   |   |   ├─ vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
+ |   |   |   |   ├─ vmx_set_constant_host_state(vmx); // 设置host-state常量
+ |   |   |   |   |   ├─ vmcs_write1(HOST_RIP, (unsigned long)vmx_vmexit); //vmexit后vmm的入口地址, 这里面是个ret, 详细说明见下面VCPU_RUN
+ |   |   |   |   ├─ vm_exit_controls_set(); // vm-exit控制域设置
+ |   |   |   |   ├─ vm_entry_controls_set(); // vm-entry控制域设置
+ |   |   |   |   ├─ vm_entry_controls_set(); // vm-entry控制域设置
+ |   |   |   |  vmx_vcpu_put();
+ |   |   |   |      vmx_vcpu_pi_put();
+ |   |   |   |      vmx_prepare_switch_to_host(); // 
+ |   |   |   |  put_cpu();
  |   |   ├─ kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
  |   |   ├─ vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
  |   |   |     kvm_arch_vcpu_load(vcpu, cpu)
