--- a/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
+++ b/Virtualization/KVM/3. CPU虚拟化/4. 代码分析.md
@@ -400,7 +400,8 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
  |   |   |   |  vmx_vcpu_put();
  |   |   |   |      vmx_vcpu_pi_put();
  |   |   |   |      vmx_prepare_switch_to_host(); // 
- |   |   |   |  put_cpu();
+ |   |   |   ├─ alloc_apic_access_page(); // 
+ |   |   |   └─ init_rmode_identity_map();
  |   |   ├─ kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
  |   |   ├─ vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
  |   |   |     kvm_arch_vcpu_load(vcpu, cpu)
